--- a/test-style/test-fullpage.css
+++ b/test-style/test-fullpage.css
@@ -34,7 +34,7 @@ body {
 
 .element-two {
   padding: 15px;
-  margin-top: 20px
+  margin-top: 30px;
   text-align: center;
   font-weight: 400;
   font-size: 14px;
